--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) OJOJOJOJ -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-911QDKJDBF"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
